correção de caracteres do enunciado

--- a/List04Ex01_UnconstrainedOptimization.ipynb
+++ b/List04Ex01_UnconstrainedOptimization.ipynb
@@ -83,7 +83,7 @@
       "source": [
         "## O problema - minimização não restrita\n",
         "\n",
-        "Ajustar a uma exponencial do tipo $𝒂𝒆^{𝒃𝒙}$ a um conjunto de pontos ($x_i$, $y_i$) dados pela seguinte tabela."
+        "Ajustar a uma exponencial do tipo $ae^{bx}$ a um conjunto de pontos ($x_i$, $y_i$) dados pela seguinte tabela."
       ]
     },
     {
